comentando o codigo